[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "asyncio-event-bus"
version = "0.1.0"
description = "Asyncio Event Bus provides a simple event system which can be used with async functions."
authors = ["Marcel Gutsche <marcel.gutsche@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "asyncio_event_bus"}]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19"
pytest-pycharm = "^0.7.0"